// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PRIMARY BUTTON Primary button BRAND variant 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#c12822",
      "borderRadius": 8,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginTop": 8,
      "minHeight": 35,
      "opacity": 1,
      "padding": 8,
      "paddingLeft": 16,
      "paddingRight": 16,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#222222",
          "fontFamily": "Museo-300",
          "fontSize": 15,
          "letterSpacing": 0,
          "lineHeight": 18,
        },
        Object {
          "color": "#ffffff",
        },
      ]
    }
    variant="P2"
  >
    button
  </Text>
</View>
`;

exports[`PRIMARY BUTTON Primary button DEFAULT variant 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e5e5e5",
      "borderRadius": 8,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginTop": 8,
      "minHeight": 35,
      "opacity": 1,
      "padding": 8,
      "paddingLeft": 16,
      "paddingRight": 16,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#222222",
          "fontFamily": "Museo-300",
          "fontSize": 15,
          "letterSpacing": 0,
          "lineHeight": 18,
        },
        Object {
          "color": "#222222",
        },
      ]
    }
    variant="P2"
  >
    button
  </Text>
</View>
`;
